fix spurrious linebreak in citations

--- a/style.css
+++ b/style.css
@@ -910,3 +910,24 @@ a:hover {
 	display: table-cell;
   text-align: center;
 }
+
+
+div.csl-bib-body { }
+div.csl-entry {
+  clear: both;
+}
+.hanging div.csl-entry {
+  margin-left:2em;
+  text-indent:-2em;
+}
+div.csl-left-margin {
+  min-width:2em;
+  float:left;
+}
+div.csl-right-inline {
+  margin-left:2em;
+  padding-left:1em;
+}
+div.csl-indent {
+  margin-left: 2em;
+}
